# vkgroundcontrol

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  overview.md  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc  qml.qrc  qtquickcontrols2.conf
android/: AndroidManifest.xml  build.gradle
android/libs/: rcsdk-v1.7.4.aar  vkrcsdk.aar
android/src/org/mavlink/qgroundcontrol/: QGCActivity.java  UdpBridge.kt
cmake/: CustomOptions.cmake
cmake/find-modules/: FindGStreamer.cmake
doc/: build.md  payload.md  sdkmanual.md
src/: CMakeLists.txt  QGCApplication.cc  QGCApplication.h  main.cc
src/Android/: AndroidInit.cc  CMakeLists.txt
src/FactSystem/: CMakeLists.txt  Fact.cc  Fact.h  FactGroup.h  FactMetaData.cc  FactMetaData.h  SettingsFact.cc
src/QmlControls/: AppMessages.cc  AppMessages.h  CMakeLists.txt  FactValueGrid.cc  FactValueGrid.h  FileDownloader.cpp  FileDownloader.h  QGCImageProvider.h  QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h  VKPalette.cc  VKPalette.h
src/QtLocationPlugin/: QGeoTiledMapQGC.cpp
src/QtLocationPlugin/Providers/: BingMapProvider.cpp  EsriMapProvider.cpp
src/QtLocationPlugin/QMLControl/: OfflineMapEditor.qml
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AppSettings.h  CMakeLists.txt  SettingsGroup.cc  SettingsManager.cc  SettingsManager.h  VideoSettings.cc
src/UI/: BMSMsgToolbar.qml  MainRootWindow.qml  MainVKToolBar.qml
src/UI/Controls/: CustomComboBox.qml  CustomPopup.qml  GroupButton.qml  IconButton.qml  IconTextButton.qml  KeyboardNumView.qml  MathKeyboard.qml  NumericInputField.qml  NumericParameterControl.qml  NumericParameterInputControl.qml  OpacityMask.qml  ParameterComboBox.qml  SliderSwitch.qml  TextButton.qml  VKCheckBox.qml  VKColoredImage.qml  VKFlickable.qml  VKLabel.qml  VKMessageShow.qml  VKPipOverlay.qml  VKSeekBar.qml  VKSetToolbar.qml  VKSlider.qml  VTitle.qml  VerticalIconTextButton.qml  qmldir
src/UI/FlightDisplay/: FlightDisplayViewVideo.qml  FlyView.qml  FlyViewCustomLayer.qml  FlyViewMap.qml  FlyViewMsgPanel.qml  FlyViewPanelPart1.qml  FlyViewPanelPart2.qml  FlyViewPanelPart3.qml  FlyViewRightSetWindow.qml  FlyViewVideo.qml  MessageAllShow.qml  MissionTypeSelector.qml  ObstacleDistanceOverlayVideo.qml  OptionSelector.qml  ProximityRadarVideoView.qml  SafeSetting.qml  SettingOptionRow.qml  SixTuText.qml  SurveyLineSettings.qml  VKAreaSet.qml  VKBatterySet.qml  VKOtherSet.qml  VKParSet.qml  VKReturn.qml  VKStartMission.qml  VKVideoBackground.qml  WaypointListPanel.qml  WaypointSettingsDialog.qml  qmldir
src/UI/FlightMap/: FlightMap.qml  MapScale.qml  VehicleMapItem.qml  qmldir
src/UI/Home/: HomePage.qml  qmldir
src/UI/Home/Common/: BaseSettingPage.qml  IconTitle.qml  InstallParameterInputField.qml  ToolTitle.qml
src/UI/Home/DeviceManager/: BatteryManagerPage.qml  BatteryMsg.qml  BatteryParam.qml  BatteryParamValue.qml  CameraManagerPage.qml  CanvasDrawing.qml  DeviceButton.qml  DeviceManager.qml  DeviceManagerMainView.qml  FirmwareUpgrade.qml  FlightControllerManagerPage.qml  PWMSet.qml  PWMSetTitle.qml  PayloadManagerPage.qml  RCAdjuster.qml  RCModel.qml  RCSet.qml  RadarDashboard.qml  RadarManagerPage.qml  RemoteBar.qml  RemoteSensing.qml
src/UI/Home/FactorySettings/: FactorySettings.qml  InstallSetting.qml  LogDownloadPage.qml  MotionParamBar.qml  MotionSettings.qml  MotorBar.qml  MotorCheckSetting.qml  PIDSet.qml  PlaneModel.qml  PlaneModelButton.qml  VKInstallBase.qml  VKInstallPart1.qml  VKInstallPart2.qml  VKInstallPart3.qml  VKInstallPart4.qml  VKInstallPart5.qml
src/UI/Home/LinkSettings/: LinkSelect.qml  LinkSettings.qml  SerialSettings.qml  UdpSettings.qml
src/UI/ScreenTools/: ScreenTools.qml  qmldir
src/Utilities/: CMakeLists.txt  DeviceInfo.cc  DeviceInfo.h  JsonHelper.cc  JsonHelper.h
src/Utilities/Geo/: CMakeLists.txt  QGCGeo.cc  QGCGeo.h
src/Utilities/Shape/: ShapeFileHelper.cc  ShapeFileHelper.h
src/VideoManager/: CMakeLists.txt  VideoManager.cc  VideoManager.h
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc  GStreamer.h  GstVideoReceiver.cc
src/VideoManager/VideoReceiver/GStreamer/gstqml6gl/: CMakeLists.txt
src/VideoManager/VideoReceiver/QtMultimedia/: CMakeLists.txt
vkqtsdk/include/: areamission_model.h  mission_model.h  objmanager.h  scanmission_model.h  vehicle.h  vkqtsdk.h  vkqtsdktypes.h
